--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
-
-!DOCTYPE html>
-<html>
+<!DOCTYPE html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 <title>IFRJ - Curso de Informática para Internet</title>
